--- a/package.json
+++ b/package.json
@@ -23,25 +23,23 @@
     "eslint": "^8.22.0",
     "express": "^4.18.1",
     "express-validator": "^6.14.2",
-    "jsonwebtoken": "^8.5.1",
-    "migrate-mongo": "^9.0.0",
-    "mongodb": "4.8",
-    "mongoose": "^6.5.1",
     "morgan": "^1.10.0",
+    "mysql2": "^2.3.3",
     "pg": "^8.7.3",
     "reflect-metadata": "^0.1.13",
     "rotating-file-stream": "^3.0.4",
     "sequelize": "^6.21.3",
     "sequelize-typescript": "^2.1.3",
+    "tedious": "^11.0.8",
     "ts-node": "^10.9.1"
   },
   "devDependencies": {
-    "jest-cli": "^28.1.3",
     "@types/express": "^4.17.13",
     "@types/jest": "^28.1.7",
     "@types/node": "^18.6.3",
     "@types/supertest": "^2.0.12",
     "jest": "^28.1.3",
+    "jest-cli": "^28.1.3",
     "nodemon": "^2.0.18",
     "sequelize-cli": "^6.4.1",
     "sucrase": "^3.23.0",
