--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@faker-js/faker": "^7.3.0",
     "@types/bcrypt": "^5.0.0",
     "@types/validator": "^13.7.4",
+    "axios": "^1.1.3",
     "bcrypt": "^5.0.1",
     "body-parser": "^1.20.0",
     "compression": "^1.7.4",
