--- a/package.json
+++ b/package.json
@@ -9,7 +9,8 @@
     "dev": "nodemon src/app.ts",
     "build": "tsc",
     "start": "node dist/app.js",
-    "test": "jest"
+    "test": "jest",
+    "seeder": "ts-node src/assets/import/index.ts"
   },
   "dependencies": {
     "@faker-js/faker": "^7.3.0",
