--- a/env.example
+++ b/env.example
@@ -5,12 +5,12 @@ STATIC_URL=http://localhost:8000
 
 #JWT
 SERVER_JWT=
-SERVER_JWT_SECRET=123
-SERVER_JWT_TIMEOUT=1h
+SERVER_JWT_SECRET=
+SERVER_JWT_TIMEOUT=
 
 #DATABASE
 DB_DIALECT=mssql
 DB_HOST=3306
 DB_USER=root
 DB_PASS=root
-DB_NAME=hotel-booking
+DB_NAME=
