--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
   "scripts": {
     "dev": "nodemon src/app.ts",
     "build": "tsc",
-    "start": "node dist/app.js",
+    "start": "export NODE_ENV=dev && node dist/app.js",
     "test": "jest",
     "seeder": "ts-node src/assets/import/index.ts"
   },
@@ -21,7 +21,7 @@
     "body-parser": "^1.20.0",
     "compression": "^1.7.4",
     "cors": "^2.8.5",
-    "dotenv": "^16.0.1",
+    "dotenv": "^16.0.3",
     "eslint": "^8.22.0",
     "express": "^4.18.1",
     "express-validator": "^6.14.2",
