--- a/environment.env
+++ b/environment.env
@@ -10,7 +10,9 @@ SERVER_JWT_TIMEOUT=
 
 #DATABASE
 DB_DIALECT=mssql
-DB_HOST=3306
+DB_HOST=127.0.0.1
 DB_USER=root
 DB_PASS=root
-DB_NAME=
+DB_NAME=hotel-booking
+
+DB_CONN_STRING=
