--- a/environment.env
+++ b/environment.env
@@ -9,7 +9,7 @@ SERVER_JWT_SECRET=
 SERVER_JWT_TIMEOUT=
 
 #DATABASE
-DB_DIALECT=mssql
+DB_DIALECT=mysql
 DB_HOST=127.0.0.1
 DB_USER=root
 DB_PASS=root
