--- a/environment.env
+++ b/environment.env
@@ -5,8 +5,8 @@ STATIC_URL=http://localhost:8000
 
 #JWT
 SERVER_JWT=
-SERVER_JWT_SECRET=
-SERVER_JWT_TIMEOUT=
+SERVER_JWT_SECRET=123
+SERVER_JWT_TIMEOUT=1d
 
 #DATABASE
 DB_DIALECT=mysql
@@ -15,4 +15,4 @@ DB_USER=root
 DB_PASS=root
 DB_NAME=hotel-booking
 
-DB_CONN_STRING=
+DATABASE_URL="mysql://bf1ddefbecd743:d799e44d@us-cdbr-east-06.cleardb.net/heroku_d7df2d9631100e4?reconnect=true";
