--- a/environment.env
+++ b/environment.env
@@ -15,4 +15,4 @@ DB_USER=root
 DB_PASS=root
 DB_NAME=hotel-booking
 
-DATABASE_URL="mysql://bf1ddefbecd743:d799e44d@us-cdbr-east-06.cleardb.net/heroku_d7df2d9631100e4?reconnect=true";
+CLEARDB_DATABASE_URL="mysql://bf1ddefbecd743:d799e44d@us-cdbr-east-06.cleardb.net/heroku_d7df2d9631100e4?reconnect=true";
