--- a/environment.env
+++ b/environment.env
@@ -11,8 +11,8 @@ SERVER_JWT_TIMEOUT=1d
 #DATABASE
 DB_DIALECT=mysql
 DB_HOST=127.0.0.1
-DB_USER=root
-DB_PASS=root
-DB_NAME=hotel-booking
+DB_USER=bf1ddefbecd743
+DB_PASS=d799e44d
+DB_NAME=heroku_d7df2d9631100e4
 
 CLEARDB_DATABASE_URL="mysql://bf1ddefbecd743:d799e44d@us-cdbr-east-06.cleardb.net/heroku_d7df2d9631100e4?reconnect=true";
