--- a/environment.env
+++ b/environment.env
@@ -15,4 +15,4 @@ DB_USER=bf1ddefbecd743
 DB_PASS=d799e44d
 DB_NAME=heroku_d7df2d9631100e4
 
-DATABASE_URL="mysql://bf1ddefbecd743:d799e44d@us-cdbr-east-06.cleardb.net/heroku_d7df2d9631100e4?reconnect=true";
+DATABASE_URL="mysql://pzagaqfvcjji6ign:tguj9vd9dlhblnaw@h1use0ulyws4lqr1.cbetxkdyhwsb.us-east-1.rds.amazonaws.com:3306/zkzljluzu5tj7sx5"
