--- a/package.json
+++ b/package.json
@@ -10,7 +10,14 @@
     "build": "tsc",
     "start": "node dist/app.js",
     "test": "jest",
-    "seeder": "ts-node src/assets/import/index.ts"
+    "seeder": "ts-node src/assets/import/index.ts",
+     "migration": "sequelize-cli db:migrate",
+    "un_migration": "sequelize-cli db:migrate:undo",
+    "seed": "sequelize-cli db:seed:all",
+    "reset": "sequelize db:migrate:undo:all && sequelize-cli db:migrate && sequelize-cli db:seed:all",
+    "migrate_reset": "sequelize db:migrate:undo:all && sequelize-cli db:migrate && sequelize db:seed",
+    "migrate:dev": "yarn run build && cross-env NODE_ENV=development dotenv -e .env sequelize db:migrate",
+    "migrate:prod": "yarn run build && cross-env NODE_ENV=production dotenv -e .env sequelize db:migrate --env production"
   },
   "dependencies": {
     "@faker-js/faker": "^7.3.0",
