--- a/package.json
+++ b/package.json
@@ -42,7 +42,7 @@
     "sequelize": "^6.21.3",
     "sequelize-typescript": "^2.1.3",
     "ts-node": "^10.9.1",
-    "sequelize-cli": "^6.4.1",
+    "sequelize-cli": "^6.4.1"
   },
   "devDependencies": {
     "@types/express": "^4.17.13",
